[package]
name = "uc-intg-hass"
version = "0.10.0"
edition = "2021"
authors = ["Markus Zehnder <markus.z@unfoldedcircle.com>"]
license = "MPL-2.0"
description = "Unfolded Circle Home-Assistant integration for Remote Two"
repository = "https://github.com/unfoldedcircle/integration-home-assistant"
default-run = "uc-intg-hass"

[profile.release]
strip = true  # Automatically strip symbols from the binary.

[lib]
path = "src/lib.rs"

[[bin]]
name = "uc-intg-hass"
path = "src/main.rs"

[[bin]]
name = "ha-test"
path = "src/bin/ha_test.rs"

[features]
default = []
mdns-sd = ["dep:mdns-sd"]
zeroconf = ["dep:zeroconf"]

[dependencies]
uc_api = { git = "https://github.com/unfoldedcircle/api-model-rs", tag = "v0.12.1" }
# for local development:
#uc_api = { path = "../api-model-rs" }
# Using a GitHub revision:
#uc_api = { git = "https://github.com/unfoldedcircle/api-model-rs", rev = "1650ada3e11bb90318cef173811b6c475fa1d782" }

# WebSockets server
actix-web = { version = "4.4", features = ["rustls-0_21"] }
actix-web-actors = "4.2"
actix = "0.13"
actix-tls = { version = "3.1", features = ["rustls-0_21"] }
bytestring = "1"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-pemfile = "1"
# rustls-pki-types = "1" # required for rustls 0.22
# WebSockets client
actix-codec = "0.5"
awc = { version = "3.3", features = ["rustls-0_21"] }
bytes = "1"
futures = "0.3"

# see mdns-sd patch at the end of this file
mdns-sd = { version = "0.9.3", optional = true }
if-addrs = "0.13"
hostname = "0.4"
zeroconf = { version = "0.14", optional = true }

# JSON (de)serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"

rust-fsm = "0.6"

clap = "4"
config = { version = "0.14", default-features = false, features = ["yaml", "json"] }
const_format = "0.2"
env_logger = "0.11"
lazy_static = "1.4"
log = "0.4"

uuid = { version = "1.0.0", features = ["v4"] }
url = { version = "2", features = ["serde"] }
time = { version = "0.3", default-features = false, features = ["std", "formatting"] }

# Helpful macros for working with enums and strings
# Attention: strum needs to be in sync with uc_api
strum = "0.26"
strum_macros = "0.26"
derive_more = "0.99"

anyhow = { version = "1", features = [] }
itertools = "0.13.0"

[build-dependencies]
# Warning! Using built 0.7.1 upgrades git2 0.18.3 to 0.19.0 and libgit2-sys 0.16.2+1.7.2 to 0.17.0+1.8.1 which breaks cross compilation!
built = { version = "0.7.1", features = ["git2", "chrono", "dependency-tree", "semver"] }

[dev-dependencies]
rstest = "0.21"

[patch.crates-io]
mdns-sd = { git = "https://github.com/zehnm/mdns-sd", rev = "aa95af75e21f40ee9ea74d117ca31e0672d722fb" }
