[package]
name = "uc-intg-hass"
version = "0.13.1"
edition = "2024"
authors = ["Markus Zehnder <markus.z@unfoldedcircle.com>"]
license = "MPL-2.0"
description = "Unfolded Circle Home-Assistant integration for Remote Two/3"
repository = "https://github.com/unfoldedcircle/integration-home-assistant"
default-run = "uc-intg-hass"

[profile.release]
strip = true  # Automatically strip symbols from the binary.

[lib]
path = "src/lib.rs"

[[bin]]
name = "uc-intg-hass"
path = "src/main.rs"

[[bin]]
name = "ha-test"
path = "src/bin/ha_test.rs"

[features]
default = []
mdns-sd = ["dep:mdns-sd"]
zeroconf = ["dep:zeroconf"]

[dependencies]
uc_api = { git = "https://github.com/unfoldedcircle/api-model-rs", tag = "v0.14.0" }
# for local development:
#uc_api = { path = "../api-model-rs" }
# Using a GitHub revision:
#uc_api = { git = "https://github.com/unfoldedcircle/api-model-rs", rev = "cb59e2f1f703f8d9fdca09937b318c55256b27c4" }

# WebSockets server
actix-web = { version = "4.11", features = ["rustls-0_23"] }
actix-ws = "0.3"
actix = "0.13"
rustls = { version = "0.23" }
rustls-platform-verifier = "0.6"
rustls-pemfile = "2"
# WebSockets client
actix-codec = "0.5"
awc = { version = "3.8", features = ["rustls-0_23"] }
bytes = "1"
futures = "0.3"
# Tokio is used by actix, but AFAIK the select! macro is not re-exported
tokio = { version = "1", features = ["macros"] }

# see mdns-sd patch at the end of this file
mdns-sd = { version = "0.9.3", optional = true }
if-addrs = "0.14"
hostname = "0.4"
zeroconf = { version = "0.15", optional = true }

# JSON (de)serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"

rust-fsm = "0.6"

clap = "4"
config = { version = "0.15", default-features = false, features = ["yaml", "json"] }
const_format = "0.2"
env_logger = "0.11"
lazy_static = "1.4"
log = "0.4"

uuid = { version = "1", features = ["v4"] }
url = { version = "2", features = ["serde"] }

# Helpful macros for working with enums and strings
# Attention: strum needs to be in sync with uc_api
strum = "0.27"
derive_more = { version = "2", features = ["constructor", "display"] }

anyhow = { version = "1", features = [] }

[build-dependencies]
# Warning: git2 feature causes a stack smashing error in cross-compilation, even with 16MB stack!
# Solved with a custom git callout in build.rs
built = { version = "0.8", features = ["chrono", "semver", "cargo-lock"] }

[dev-dependencies]
rstest = "0.26"

[patch.crates-io]
mdns-sd = { git = "https://github.com/zehnm/mdns-sd", rev = "aa95af75e21f40ee9ea74d117ca31e0672d722fb" }
